# test-openmp

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  memory_traffic.h  run_experiments.sh  run_latency-experiments.sh  run_layer_norm_experiment.sh  run_througput-experiments.sh  threadpool.h  toolbox.h
INSTRUMENTATION/: Makefile
cmake/: callgraph.cmake  get_codes.cmake  get_roofline.cmake  get_runtime.cmake  get_traffic.cmake  turbo_boost.cmake
kernels/: base_kernel.hpp  dnnl_fp32_binary_blocked_kernel.cpp  dnnl_fp32_binary_blocked_kernel.hpp  dnnl_fp32_binary_kernel.cpp  dnnl_fp32_binary_kernel.hpp  dnnl_fp32_conv_blocked_kernel.cpp  dnnl_fp32_conv_blocked_kernel.hpp  dnnl_fp32_conv_kernel.cpp  dnnl_fp32_conv_kernel.hpp  dnnl_fp32_conv_winograd_kernel.cpp  dnnl_fp32_conv_winograd_kernel.hpp  dnnl_fp32_eltwise_blocked_kernel.cpp  dnnl_fp32_eltwise_blocked_kernel.hpp  dnnl_fp32_eltwise_kernel.cpp  dnnl_fp32_eltwise_kernel.hpp  dnnl_fp32_fc_kernel.cpp  dnnl_fp32_fc_kernel.hpp  dnnl_fp32_layer_norm_kernel.cpp  dnnl_fp32_layer_norm_kernel.hpp  dnnl_fp32_pool_blocked_kernel.cpp  dnnl_fp32_pool_blocked_kernel.hpp  dnnl_fp32_pool_kernel.cpp  dnnl_fp32_pool_kernel.hpp  kernel.cpp  kernel.h  kernel.hpp
results/: i5-6300U.txt
